crates/syntax/tests/snapshots/parser__parser_formatted expr string both.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..49,
        statements: StatementList {
            span: 0..49,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..49,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: String(
                            FormatString {
                                span: 0..49,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parts: [
                                    Content(
                                        StringLiteral {
                                            span: 1..8,
                                            content: "string ",
                                        },
                                    ),
                                    Expression(
                                        StringExpression {
                                            span: 36..37,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            expression: BinaryOperation(
                                                BinaryOperation {
                                                    span: 9..31,
                                                    lhs: QualifiedName(
                                                        QualifiedName {
                                                            span: 9..18,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [
                                                                        Whitespace(
                                                                            " ",
                                                                        ),
                                                                    ],
                                                                ),
                                                            },
                                                            parts: [
                                                                Identifier {
                                                                    span: 9..18,
                                                                    name: "formatted",
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    operation: BinaryOperator {
                                                        span: 19..20,
                                                        operation: Subtract,
                                                    },
                                                    rhs: QualifiedName(
                                                        QualifiedName {
                                                            span: 21..31,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            parts: [
                                                                Identifier {
                                                                    span: 21..31,
                                                                    name: "expression",
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                },
                                            ),
                                            specification: StringFormatSpecification {
                                                span: 32..36,
                                                precision: Some(
                                                    Ok(
                                                        5,
                                                    ),
                                                ),
                                                width: Some(
                                                    Ok(
                                                        3,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                    Content(
                                        StringLiteral {
                                            span: 37..48,
                                            content: " expression",
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
