crates/syntax/tests/snapshots/parser__parser_formatted expr string.snap
---
source: crates/syntax/tests/parser.rs
expression: parser().parse(input).into_result()
---
Err(
    [
        found 'LiteralString(
            [
                SpannedToken {
                    span: 1..8,
                    token: Content(
                        "string ",
                    ),
                },
                SpannedToken {
                    span: 35..36,
                    token: FormatStart(
                        (
                            [
                                SpannedToken {
                                    span: 9..17,
                                    token: Identifier(
                                        "formated",
                                    ),
                                },
                                SpannedToken {
                                    span: 18..19,
                                    token: OperatorSubtract,
                                },
                                SpannedToken {
                                    span: 20..30,
                                    token: Identifier(
                                        "expression",
                                    ),
                                },
                            ],
                            [
                                SpannedToken {
                                    span: 31..33,
                                    token: FormatWidth(
                                        "03",
                                    ),
                                },
                                SpannedToken {
                                    span: 33..35,
                                    token: FormatPrecision(
                                        ".5",
                                    ),
                                },
                            ],
                        ),
                    ),
                },
                SpannedToken {
                    span: 36..47,
                    token: Content(
                        " expression",
                    ),
                },
            ],
        )' at 47..48 expected statement, expression, or end of input,
    ],
)
