crates/syntax/tests/snapshots/parser__parser_function empty args with comment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..22,
        statements: StatementList {
            span: 0..22,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Function(
                    FunctionDefinition {
                        span: 0..22,
                        keyword_span: 0..2,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: None,
                        attributes: [],
                        visibility: None,
                        name: Identifier {
                            span: 3..6,
                            name: "foo",
                        },
                        parameters: ParameterList {
                            span: 7..17,
                            extras: ItemExtras {
                                leading: [
                                    Comment(
                                        Comment {
                                            span: 7..17,
                                            lines: [
                                                "test",
                                            ],
                                        },
                                    ),
                                ],
                                trailing: [],
                            },
                            parameters: [],
                        },
                        return_type: None,
                        body: StatementList {
                            span: 20..21,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            statements: [],
                            tail: Some(
                                Expression(
                                    ExpressionStatement {
                                        span: 20..21,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        attributes: [],
                                        expression: Literal(
                                            Literal {
                                                span: 20..21,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 20..21,
                                                        value: 2,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    },
                ),
            ],
            tail: None,
        },
    },
)
